Fix Problems(Speed Change,Owner Data,Timer Day,Check Person Id,Occurrence Speed)

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -27,7 +27,7 @@
                <tr>
                   <td style="max-width: 50%;">
                      <div class="panel">
-                        <div class="panel-heading bg-primary text-white img-rounded " style="height: 80px;">
+                        <div class="panel-heading bg-primary text-white img-rounded " style="height: 60px;">
                            <input class="btn btn-success" type="button" id="statusScore" onclick="tablestatus('Score');"  value="Score(On)" />
                            <input class="btn btn-success" type="button" onclick="ScoreMin()" value="Refresh"/>
                         </div>
@@ -44,8 +44,8 @@
                   </td>
                   <td style="max-width: 50%;">
                      <div class="panel">
-                        <div class="panel-heading text-right bg-primary text-white img-rounded" style="height: 80px;" dir="rtl">
-                           <input class="btn btn-success" type="button" value="خروج"/>
+                        <div class="panel-heading text-right bg-primary text-white img-rounded" style="height: 60px;" dir="rtl">
+                           <input class="btn btn-success" type="button" value="Exit"/>
                         </div>
                         <hr />
                         <div class="panel-body text-right img-rounded bg-info text-white" style="max-height: 300px;overflow:auto;margin: 0px 6px 6px 6px;" dir="rtl">
@@ -184,9 +184,10 @@
                <tr>
                   <td class="align-top" colspan="2">
                      <div class="panel">
-                        <div class="panel-heading bg-primary text-white img-rounded" style="height: 80px;">
+                        <div class="panel-heading bg-primary text-white img-rounded" style="height: 60px;">
                            <input type="button" id="statusShare" onclick="tablestatus('Share');" class="btn btn-success" value="Shares(On)" />
                         </div>
+						<hr />
                         <div class="panel-body img-rounded bg-info text-white" style="max-height:350px;height: 350px;overflow:auto;margin: 0px 6px 6px 6px;">
                            <table id="Share" class="table table-striped">
                               <thead>
@@ -200,9 +201,10 @@
                <tr>
                   <td class="align-top" colspan="2">
                      <div class="panel">
-                        <div class="panel-heading bg-primary text-white img-rounded " style="height: 80px;">
+                        <div class="panel-heading bg-primary text-white img-rounded " style="height: 60px;">
                            <input type="button" id="statusDeep" onclick="tablestatus('Deep');" class="btn btn-success" value="Deeps(On)" />
                         </div>
+						<hr />
                         <div class="panel-body img-rounded bg-info text-white" style="max-height:400px;height: 400px;overflow:auto;margin: 0px 6px 6px 6px;">
                            <table id="Deep" class="table table-striped" disabled="true">
                               <thead>
@@ -216,10 +218,11 @@
                <tr>
                   <td class="align-top" colspan="2">
                      <div class="panel">
-                        <div class="panel-heading bg-primary text-white img-rounded " style="height: 80px;">
+                        <div class="panel-heading bg-primary text-white img-rounded " style="height: 60px;">
                            <input type="button" id="statusOwner" onclick="tablestatus('Owner');" class="btn btn-success" value="Owners(On)" />
                            <input class="btn btn-success" type="button" onclick="OwnerRefresh()" value="Refresh"/>
                         </div>
+						<hr />
                         <div class="panel-body img-rounded bg-info text-white" style="max-height:500px;height: 500px;overflow:auto;margin: 0px 6px 6px 6px;">
                            <table id="Owner" class="table table-striped">
                               <thead>
