--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -31,15 +31,15 @@
                   <td>
                      <div class="panel">
                         <div class="panel-heading bg-primary text-white img-rounded" style="height: 60px;">
-                           <input class="btn btn-success" type="button" id="statusScore" onclick="tablestatus('Score');"  value="Score(On)" />
+                           <input class="btn btn-success" type="button" id="statusMScore" onclick="tablestatus('MScore');"  value="Score(On)" />
                            <input class="btn btn-success" type="button" onclick="ScoreMin()" value="Refresh"/>
                         </div>
                         <hr />
                         <div class="panel-body img-rounded bg-info text-white" style="width:100vw;max-height:300px;height: 300px;overflow:auto;margin: 0px 6px 6px 6px;">
-                           <table id="Score" class="table table-striped">
+                           <table id="MScore" class="table table-striped">
                               <thead>
                               </thead>
-                              <tbody id="tbscores">
+                              <tbody id="tbmscores">
                               </tbody>
                            </table>
                         </div>
@@ -194,15 +194,15 @@
                   <td style="max-width: 50%;">
                      <div class="panel">
                         <div class="panel-heading bg-primary text-white img-rounded " style="height: 60px;">
-                           <input class="btn btn-success" type="button" id="statusScore" onclick="tablestatus('Score');"  value="Score(On)" />
+                           <input class="btn btn-success" type="button" id="statusDScore" onclick="tablestatus('DScore');"  value="Score(On)" />
                            <input class="btn btn-success" type="button" onclick="ScoreMin()" value="Refresh"/>
                         </div>
                         <hr />
                         <div class="panel-body img-rounded bg-info text-white" style="max-height:300px;height: 300px;overflow:auto;margin: 0px 6px 6px 6px;">
-                           <table id="Score" class="table table-striped">
+                           <table id="DScore" class="table table-striped">
                               <thead>
                               </thead>
-                              <tbody id="tbscores">
+                              <tbody id="tbdscores">
                               </tbody>
                            </table>
                         </div>
